--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "yolov5"]
 	path = yolov5
 	url = https://github.com/ultralytics/yolov5.git
+[submodule "src/model/yolov5"]
+	path = src/model/yolov5
+	url = https://github.com/ultralytics/yolov5.git
